--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
                 <div class="welcome">
                     <div class="welcome-text">
                         <h1 id="welcome-string">Dear guests!</h1>
-                        <p class="welcome-wedding" id="welcome-wed">We're so excited to celebrate this special day with you!</p>
-                        <p class="welcome-text-main">Join us to share the happiness as we begin this new part of our life together.
-                            We can't wait to laugh, celebrate, and create beautiful memories with all of you.
+                        <p class="welcome-wedding" id="welcome-wed">With love in our hearts and dreams for the future, we are so grateful to share this day with you.</p>
+                        <p class="welcome-text-main">
+                            Join us to share the happiness as we begin this new part of our life together.
                         </p>
-                        <p class="welcome-text-date">The wedding celebration will be 14.06.2025</p>
+                        <p class="welcome-text-date">Wedding celebration on 14 June</p>
                         <p class="welcome-text-main">With love, Julia & Noah</p>
-                        <p class="welcome-text-date">wedding celebration in:</p>
                         <div id="countdown" class="countdown">
                             <div class="mesure">
                                 <div id="day"></div>
@@ -147,13 +146,28 @@
                 <p>
                     We look forward to celebrating with you in elegance – we invite you to embrace the color theme to add a touch of harmony to the warm, rustic atmosphere of the location on our special day.
                 </p>
+                <p style="text-align: center;">Colors for Ladies:</p>
+                <div class="colors">
+                    <div class="color light-blue"></div>
+                    <div class="color green"></div>
+                    <div class="color skin"></div>
+                    <div class="color pink"></div>
+
+                </div>
+                <p style="text-align: center;">Colors for Gentlemen:</p>
+                <div class="colors men">
+                    <div class="color black"></div>
+                    <div class="color gray"></div>
+                    <div class="color ligth-gray"></div>
+                    <div class="color white"></div>
+                </div>
                 <p>
                     Our home is full, our hearts are too – as a gift, an envelope for our honeymoon will do!
                 </p>
             </div>
         </section>
         <section>
-            <h2>WE CAN’T WAIT TO SEE WITH YOU!</h2>
+            <h2>WE CAN’T WAIT TO SEE YOU!</h2>
         </section>
     </div>
     </div>
